--- a/task3.css
+++ b/task3.css
@@ -21,19 +21,19 @@ body {
 }
 
 .card-1 {
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(jmage.png.jpg)
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(Image.png)
 }
 
 .card-2 {
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(jmage-1.png.jpg)
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(Image-1.png)
 }
 
 .card-3 {
-    background:linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)),  url(jmage-2.png.jpg)
+    background:linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)),  url(Image-2.png)
 }
 
 .card-4 {
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(jmage-3png.jpg)
+    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)), url(Image-3.png)
 }
 
 .card{ 
